---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: snapshot_output
---
Error: cyclic load detected while loading `[TEMP_DIR]a.zen`
   ╭─[ [TEMP_DIR]b.zen:3:1 ]
   │
 3 │ load("./a.zen", "a_func")
   │ ────────────┬────────────  
   │             ╰────────────── cyclic load detected while loading `[TEMP_DIR]a.zen`
   │
   ├─[ [TEMP_DIR]a.zen:3:6 ]
   │
 3 │ load("./b.zen", "b_func")
   │      ────┬────  
   │          ╰────── Error loading module `./b.zen`
───╯
